# hackport

./: .gitignore  .gitmodules  Action.hs  AnsiColor.hs  Bash.hs  BlingBling.hs  CHANGELOG.md  Cabal2Ebuild.hs  CabalDistributionVersion.hs  Cache.hs  CacheFile.hs  Config.hs  Diff.hs  DistroMap.hs  Error.hs  GenerateEbuild.hs  HACKING.rst  Hackage.hs  Index.hs  Main-GuessGHC.hs  Main.hs  Merge.hs  OverlayPortageDiff.hs  Overlays.hs  P2.hs  Package.hs  Paths_Cabal.hs  Paths_cabal_install.hs  Portage.hs  Progress.hs  README  README.rst  Setup.hs  Status.hs  TODO  Util.hs  Utils.hs  Version.hs  cabal2ebuild.hs  hackport  (+3 more)
.github/workflows/: haskell.yml
HackPort/: GlobalFlags.hs
Merge/: Dependencies.hs  Utils.hs
Portage/: Cabal.hs  Dependency.hs  EBuild.hs  EMeta.hs  GHCCore.hs  Host.hs  Metadata.hs  Overlay.hs  PackageId.hs  Resolve.hs  Tables.hs  Use.hs  Version.hs
Portage/Dependency/: Builder.hs  Normalize.hs  Print.hs  Types.hs
Portage/EBuild/: CabalFeature.hs
cabal/: IMPORTED-FROM
cabal-install-0.6.0/: Paths_cabal_install.hs
cabal-install-0.6.2/: Paths_cabal_install.hs
cabal-install-0.7.5/: Paths_cabal_install.hs
cabal-install-0.8.0/: Paths_cabal_install.hs
cabal-install-0.8.2/: Paths_cabal_install.hs
cabal-install-0.9.5_rc20101226/: Paths_cabal_install.hs
cabal/cabal-install/: Paths_cabal_install.hs
exe/: Main.hs
man/: hackport.1
src/: Cabal2Ebuild.hs  Error.hs  Merge.hs  Overlays.hs  Status.hs  Util.hs
tests/: MergeDeps.hs  RunTests.hs  doctests-v2.hs  doctests.hs  normalize_deps.hs  print_deps.hs  resolveCat.hs
unused/: Fetch.hs
(+77 files in other folders)
